# MagickaResourceUnpacker

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
src/: SegmentedFile.cpp  SegmentedFile.h  SegmentedFileDecompressor.cpp  SegmentedFileDecompressor.h  Unpacker.cpp  Unpacker.h
